# cads-toolbox

./: .cruft.json  .gitignore  Makefile  README.md  adaptor.mars.internal-1663506377.6611848-25223-5-09b2703a-592c-4f9a-9cd9-15f432c2b1f8.grib  environment-minver.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: on-push.yml
cads_toolbox/: __init__.py  _inputs_transform.py  cadsify.py  catalogue.py  inputs_transform.py
cads_toolbox/analysis/: __init__.py
ci/: environment-ci.yml
docs/: conf.py  index.md
notebooks/: aggregate.ipynb
tests/: integration_10_download.py  integration_10_remote.py  test_10_cadsify.py  test_10_download.py  test_10_inputs_transform.py  test_10_remote.py  test_20_analysis.py
