[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "cacholote",
  "cdsapi",
  "coucal",
  "emohawk>=0.0.3b1",
  "fsspec"
]
description = "CADS Toolbox library provides an entry point to the CADS data and software"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-toolbox"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
ignore_missing_imports = true
strict = false

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417",
  # pydocstyle: Whitespace Issues
  "D2",
  # pydocstyle: Docstring Content Issues
  "D4"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["cads_toolbox"]

[tool.setuptools_scm]
write_to = "cads_toolbox/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
